--- a/src/userInterface/inventoryGUI.fxml
+++ b/src/userInterface/inventoryGUI.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="1097.0" style="-fx-background-color: #c6c6c6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userInterface.inventoryController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="1097.0" style="-fx-background-color: #c6c6c6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userInterface.InventoryController">
    <center>
       <GridPane fx:id="inventory" gridLinesVisible="true" prefHeight="196.0" prefWidth="829.0" style="-fx-background-color: #8b8b8b; -fx-border-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -67,7 +67,7 @@
                   <Font size="40.0" />
                </font>
             </Label>
-            <GridPane fx:id="quickAccessBar" gridLinesVisible="true" prefHeight="54.0" prefWidth="828.0" style="-fx-background-color: #8b8b8b; -fx-border-color: black;">
+            <GridPane fx:id="quickAccessBar" gridLinesVisible="true" prefHeight="69.0" prefWidth="829.0" style="-fx-background-color: #8b8b8b; -fx-border-color: black;">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -90,7 +90,7 @@
                <graphic>
                   <ImageView fitHeight="43.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" rotate="270.0">
                      <image>
-                        <Image url="@../../../iconfinder_arrow-down-01_186411.png" />
+                        <Image url="@../resources/iconfinder_arrow-down-01_186411.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -126,7 +126,7 @@
                   <Insets bottom="30.0" left="50.0" top="30.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../sccpre.cat-minecraft-steve-png-580525.png" />
+                  <Image url="@../resources/sccpre.cat-minecraft-steve-png-580525.png" />
                </image>
             </ImageView>
             <GridPane disable="true" gridLinesVisible="true" style="-fx-background-color: #8b8b8b; -fx-border-color: black;">
@@ -144,7 +144,7 @@
             </GridPane>
             <ImageView fitHeight="112.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" rotate="270.0">
                <image>
-                  <Image url="@../../../iconfinder_FEZ-07_196909.png" />
+                  <Image url="@../resources/iconfinder_FEZ-07_196909.png" />
                </image>
                <HBox.margin>
                   <Insets left="20.0" right="20.0" top="110.0" />
